# Misc

./: .gitignore  test.tmp
CppShortCode/: AmbiMultiInher.cpp  AsmEmbeded.cpp  CallVFuncInConstructor.cpp  ChangeResolution.cpp  ChangeSharpToTail.cpp  CinState.cpp  ConcatStringLiteral.cpp  CrackReadHeart.cpp  DeleteObjectManually.cpp  DetectUsb.cpp  FinalClass.cpp  FinalClass2.cpp  FunctionPtr.cpp  GetSign.cpp  Hide.cpp  HideDesktopIcon.cpp  Macros.cpp  MemberReference.cpp  Ptr2Member.cpp  PureAbstract.cpp  PureVirtualFunctionCall.cpp  PureVirtualFunctionCall2.cpp  ReadFile.cpp  RefCount.cpp  ReturnValueOfMain.cpp  SmartPtr.cpp  String.cpp  String1.cpp  String3.h  TestRand.cpp  TestString3.cpp  UpperLower.cpp  VectorCapacity.cpp  VirtualBaseInit.cpp  VirtualDestructor.cpp  VirtualMultiInher.cpp  WriteFile.cpp  constructororder.cpp  iofile.cpp  iostate.cpp  (+17 more)
CppShortCode/6个变态的helloworld/: hello1.cpp  hello2.c  hello3.c  hello4.c  hello5.c  hello6.cpp
CppShortCode/AutoWakeUp/: TimerWithAPC.cpp  UseAbsolute.cpp  WaitForSingleOject.cpp
CppShortCode/Console/: ClearScreen.cpp  ClrConsole.cpp  Example2.cpp  Example3.cpp  Example4.cpp  Example5.cpp  Example6.cpp  Test.cpp
CppShortCode/Cpp11/unordered_map/: CMakeLists.txt  KeyBuilder.cpp  TestUnorderedMap.cpp
CppShortCode/ModifHeader/: C.cpp  C.h  cloptions.txt  main.cpp
CppShortCode/RTTI/: Const_cast.cpp  CountingShapesUsingDynamic_cast.cpp  Dynamic_cast.cpp  Dynamic_castInMultiInher.cpp  Dynamic_castWithReference.cpp  OwnRTTI.cpp  Recycle.cpp  Reinterpret_cast.cpp  Static_cast.cpp  Typeid.cpp  TypeidInMultiInher.cpp  TypeidInNestedClass.cpp  TypeidInTemplate.cpp
CppShortCode/StaticInit/: a.cpp  b.cpp  c.cpp
CppShortCode/TextQuery/: AndQuery.cpp  AndQuery.h  BinaryQuery.h  NotQuery.cpp  NotQuery.h  OrQuery.cpp  OrQuery.h  Query.cpp  Query.h  QueryBase.h  Test2.cpp  TextQuery.cpp  TextQuery.h  WordQuery.h  infile.txt
CppShortCode/Trick/: CloseTryMe.cpp  EatMemory.cpp  TryMe.cpp  TryMeV2.cpp  TryMeV3.cpp  TryMeV4.cpp  TryMeV4_1.cpp  res.rc  res.res
CppShortCode/WinSock/: DateClient.cpp  DateServer.cpp  SelectReadClient.cpp  SelectReadServer.cpp  WSAAsyncSelectClient.cpp  WSAAsyncSelectServer.cpp
CppShortCode/cmake/tutor/: CMakeLists.txt  License.txt  TutorialConfig.h.in  tutorial.cpp
CppShortCode/cmake/tutor/MathFunctions/: CMakeLists.txt  MakeTable.cpp  MathFunctions.h  mysqrt.cpp
CppShortCode/inline/: CInline.cpp  CInline.h  main.cpp
CppShortCode/pointer_to_member/: main.cpp
CppShortCode/reference_base/: main.cpp
CppShortCode/smartptr/: CMakeLists.txt  auto_ptr.cpp  auto_ptr_test.cpp  boost_shared_ptr.cpp  circle_ref_shared_ptr.cpp  my_shared_ptr.h  shared_ptr.cpp  test_my_shared_ptr.cpp  unique_ptr.cpp  weak_ptr.cpp
CppShortCode/smartptr/my_include/: t.h
CppShortCode/smartptr/shared_ptr_incomplete_type/: A.cpp  A.h  B.cpp  B.h  C.cpp  C.h  CMakeLists.txt  main.cpp
CppShortCode/typeid/: typeid.cpp
CppShortCode/单体的析构顺序/: Singleton.h  main.cpp  out.txt
CppShortCode/名称空间/: Foo.cpp  Foo.h  UseFoo.cpp
CppShortCode/多重继承应用/: Fixing.cpp  Fixing.txt  Vendor.cpp  Vendor.h
CppShortCode/对象持久化/: PersisBetterImproved.cpp  PersisImproved.cpp  PersisMultiInher.cpp  PersisSingleInher.cpp  PersisVirtual.cpp
CppShortCode/将int a 连接为 int a[] 例子/: a.cpp  b.cpp
CppShortCode/异常处理/: CleanUp.cpp  ExcepHier.cpp  Exception.cpp  ExceptionInDestructor.cpp  NakedPtr.cpp  NoAutoConverInExcpMatching.cpp  RethrowInUnexpectedHandler.cpp  StandardException.cpp  WrappedPtr.cpp
CppShortCode/模板与包容器/: Accumulate.cpp  Bitset.cpp  CinCoutIterator.cpp  CinIterator.cpp  Copy.cpp  CopyAndEdit(string).cpp  Fill.cpp  Find.cpp  Find_first_of.cpp  For_each.cpp  Inserter.cpp  Iterator.cpp  Priority_queue.cpp  ReverseIterator.cpp  Sentence.txt  Stack.h  TestStack.cpp  Unique_copy.cpp  UseMap.cpp  UseSet.cpp  WordsFilter.cpp  WordsMap.txt  WordsReplace.cpp  template的显式特化.cpp  test.cpp
CppShortCode/虚构造函数/: VirCons1.cpp  VirCons2.cpp
CppShortCode/运算符重载/: CallableObject.cpp  IndexWithString.cpp  MyManip.cpp  MyManip2.cpp  SmartPtr.cpp  operatorcomma.cpp  混淆的自动类型转换.cpp  混淆的自动类型转换2.cpp  运算符重载.cpp  避免构造函数自动转换类型.cpp
CppShortCode/静态对象何时创建/: Test.cpp  Test.txt
FP/Erlang/: afile_client.erl  afile_server.erl  args.erl  bin_test.erl  geometry.erl  geometry1.erl  hello.erl  link.erl  map_search_pred.erl  math_funcs.erl  module_analyze.erl  monitor.erl  msg_ring.erl  my_spawn.erl  my_tuple_to_list.erl  myfile.erl  mylists.erl  perms.erl  pythag.erl  qsort.erl  (+3 more)
Project/TriangleWithShaderVAO/: CMakeLists.txt  basic.frag  basic.vert  main.cpp  textfile.cpp
VSDebugger/: FCEngine.natstepfilter  FCEngine.natvis
Vim/: _vsvimrc  vimrc
(+91 files in other folders)
