cmake_minimum_required(VERSION 2.8)
project(smartptr)
find_package(Boost REQUIRED)
if(Boost_FOUND)
	message("Boost include dir is:${Boost_INCLUDE_DIRS}")
	message("Boost library dir is:${Boost_LIBRARY_DIRS}")
	include_directories(${Boost_INCLUDE_DIRS})
else()
	message(FATAL_ERROR "Boost not found")
endif()
include_directories(${PROJECT_SOURCE_DIR}/my_include)
add_executable(auto auto_ptr.cpp)
add_executable(unique unique_ptr.cpp)
add_executable(shared shared_ptr.cpp)
add_executable(crshared circle_ref_shared_ptr.cpp)
add_executable(bshared boost_shared_ptr.cpp)
add_executable(myshared test_my_shared_ptr.cpp)
